src/objects/Client__c.object
<CustomObject>
    <fields>
        <fullName>Bank_account__c</fullName>
        <label>Bank account</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_card__c</fullName>
        <label>Credit card</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_contact__c</fullName>
        <label>Main contact</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_bank_account__c</fullName>
        <label>Type of bank account</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Дебитовый счет</fullName>
                </value>
                <value>
                    <fullName>Кредитный счет</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ustomer_type__c</fullName>
        <label>Сustomer type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Organization</fullName>
                </value>
                <value>
                    <fullName>Private person</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Client</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Client Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Credit_card_rule</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL( ustomer_type__c , &quot;Organization&quot;),  Credit_card__c  &lt;&gt; null)</errorConditionFormula>
        <errorDisplayField>Credit_card__c</errorDisplayField>
        <errorMessage>Only private persons may have a credit card!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Type_for_private_customer</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL( ustomer_type__c , &quot;Organization&quot;), ISPICKVAL( Type_of_bank_account__c , &quot;Дебитовый счет&quot;))</errorConditionFormula>
        <errorDisplayField>Type_of_bank_account__c</errorDisplayField>
        <errorMessage>Only private persons can create &quot;дебитовые счета&quot;!</errorMessage>
    </validationRules>
</CustomObject>